--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Deploy to Github pages
         uses: peaceiris/actions-gh-pages@v3
         with: 
-          github_token: ${{ secrets.VITE_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
           publish_dir: ./build
         
 
